<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">TUBEM</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autoplay_through_intent_key">autoplay_through_intent</string>
    <string name="background_player_name">TUBEM Background Player</string>
    <string name="background_player_playing_toast">Playing in background</string>
    <string name="background_player_time_text">%1$s - HD TUBEM</string>
    <string name="blocked_by_gema">Blocked by GEMA.</string>
    <string name="c3s_url">https://www.c3s.cc/</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_browser">Choose browser</string>
    <string name="content_not_available">Content not available.</string>
    <string name="could_not_load_thumbnails">Could not load all Thumbnails</string>
    <string name="dark_theme_title">Dark</string>
    <string name="default_audio_format_key">default_audio_format</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_audio_format_value">m4a</string>
    <string name="default_language_value">en</string>
    <string name="default_resolution_key">default_resolution_preference</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_resolution_value">360p</string>
    <string name="default_theme_value">@string/light_theme_title</string>
    <string name="detail_dislikes_img_view_description">Dislikes</string>
    <string name="detail_likes_img_view_description">Likes</string>
    <string name="detail_thumbnail_view_description">Video preview thumbnail</string>
    <string name="detail_uploader_thumbnail_view_description">"Uploader's userpic thumbnail"</string>
    <string name="did_you_mean">Did you mean: %1$s ?</string>
    <string name="download">Download</string>
    <string name="download_dialog_title">Download</string>
    <string name="download_path_audio_dialog_title">Enter download path for audio files.</string>
    <string name="download_path_audio_key">download_path_audio</string>
    <string name="download_path_audio_summary">Path to store downloaded audio in</string>
    <string name="download_path_audio_title">Audio download path</string>
    <string name="download_path_dialog_title">Enter download path for videos</string>
    <string name="download_path_key">download_path</string>
    <string name="download_path_summary">Path to store downloaded videos in.</string>
    <string name="download_path_title">Video download path</string>
    <string name="err_dir_create">"Cannot create download directory '%1$s'"</string>
    <string name="fdroid_kore_url">https://f-droid.org/repository/browse/?fdfilter=Kore&amp;fdid=org.xbmc.kore</string>
    <string name="fdroid_vlc_url">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="general_error">Error</string>
    <string name="info_dir_created">"Created download directory '%1$s'"</string>
    <string name="install">Install</string>
    <string name="kore_not_found">Kore app not found. Install Kore?</string>
    <string name="light_theme_title">Light</string>
    <string name="list_thumbnail_view_description">Video preview thumbnail</string>
    <string name="loading">Loading</string>
    <string name="m4a_description">m4a — better quality</string>
    <string name="network_error">Network error</string>
    <string name="next_video_title">Next video</string>
    <string name="no_player_found">No stream player found. Do you want to install VLC?</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="parsing_error">Could not parse website.</string>
    <string name="play_audio">Audio</string>
    <string name="play_btn_text">Play</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="screen_rotation">rotation</string>
    <string name="search">Search</string>
    <string name="search_language_key">search_language</string>
    <string name="search_language_title">Preferred content language</string>
    <string name="search_page">"Search page: "</string>
    <string name="settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_category_appearance">settings_category_appearance</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other">settings_category_other</string>
    <string name="settings_category_other_title">Other</string>
    <string name="settings_category_video_audio">settings_category_video_audio</string>
    <string name="settings_category_video_audio_title">Video &amp; Audio</string>
    <string name="share">Share</string>
    <string name="share_dialog_title">Share with</string>
    <string name="show_next_and_similar_title">Show next and similar videos</string>
    <string name="show_next_video_key">show_next_video</string>
    <string name="show_play_with_kodi_key">show_play_with_kodi</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center.</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="similar_videos_btn_text">Similar videos</string>
    <string name="theme_key">theme</string>
    <string name="theme_title">Theme</string>
    <string name="title_videoitem_detail">TUBEM</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="url_not_supported_toast">URL not supported</string>
    <string name="use_external_audio_player_key">use_external_audio_player</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="use_external_video_player_key">use_external_video_player</string>
    <string name="use_external_video_player_title">Use external TUBEM</string>
    <string name="use_tor_key">use_tor</string>
    <string name="use_tor_summary">(Experimental) Force download traffic through Tor for increased privacy (streaming videos not yet supported).</string>
    <string name="use_tor_title">Use Tor</string>
    <string name="view_count_text">%1$s views</string>
    <string name="webm_description">WebM — free format</string>
    <string name="youtube_signature_decryption_error">Could not decrypt video url signature.</string>
    <string name="add">New mission</string>
    <string name="app_ui_crash">App/UI crashed</string>
    <string name="audio">Audio</string>
    <string name="autoplay_by_calling_app_summary">Automatically play a video when TUBEM is called from another app.</string>
    <string name="autoplay_by_calling_app_title">Autoplay when called from another app</string>
    <string name="checksum">Checksum</string>
    <string name="content">Content</string>
    <string name="could_not_get_stream">Could not get any stream.</string>
    <string name="could_not_load_image">Could not load Image</string>
    <string name="could_not_setup_download_menu">Could not setup download menu.</string>
    <string name="delete">Delete</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_title">Downloads</string>
    <string name="duration_live">live</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="error_details_headline">Details:</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_report_button_text">Report error via mail</string>
    <string name="error_report_title">Error report</string>
    <string name="error_snackbar_action">REPORT</string>
    <string name="error_snackbar_message">Sorry some errors occurred.</string>
    <string name="finish">Okay</string>
    <string name="info_labels">What:\\nRequest:\\nContent Lang:\\nService:\\nGMT Time:\\nPackage:\\nVersion:\\nOS version:\\nGlob. IP range:</string>
    <string name="info_requested_stream_lbl">Requested stream:</string>
    <string name="info_searched_lbl">Searched for:</string>
    <string name="light_parsing_error">Could not parse website completely.</string>
    <string name="live_streams_not_supported">This is a LIVE STREAM. These are not yet supported.</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="main_bg_subtitle">Tap To search All Video</string>
    <string name="msg_name">File name</string>
    <string name="msg_threads">Threads</string>
    <string name="show_age_restricted_content_title">Show age restricted content</string>
    <string name="sorry_string">Sorry that should not happen.</string>
    <string name="use_exoplayer_summary">Experimental</string>
    <string name="use_exoplayer_title">Use ExoPlayer</string>
    <string name="video">Video</string>
    <string name="what_device_headline">Info:</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="settings_content_options">settings_content_options</string>
    <string name="show_age_restricted_content">show_age_restricted_content</string>
    <string name="use_exoplayer_key">use_exoplayer</string>
</resources>