<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/errorSorryView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sorry_string"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageWhatHappenedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_happened_headline"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/errorMessageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_labels"
                android:textColor="?colorAccent" />

            <TextView
                android:id="@+id/errorDeviceHeadlineView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_device_headline"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/errorInfoLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorInfoLabelsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_labels"
                    android:textColor="?colorAccent" />

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16.0dip">

                    <TextView
                        android:id="@+id/errorInfosView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </HorizontalScrollView>
            </LinearLayout>

            <TextView
                android:id="@+id/errorDetailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/error_details_headline"
                android:textAppearance="?android:textAppearanceMedium" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/errorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/errorYourComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/your_comment"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/errorCommentBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/errorReportButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_report_button_text" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>