<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar android:theme="@style/NewPipeActionbarTheme" android:id="@+id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <View android:background="@drawable/action_shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="9.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_name" />
        <EditText android:id="@+id/file_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip">
        <RadioGroup android:orientation="horizontal" android:id="@+id/video_audio_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@+id/video_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/video" />
            <RadioButton android:id="@+id/audio_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_threads" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/threads_count" android:layout_width="20.0dip" android:layout_height="wrap_content" android:text="0" />
            <SeekBar android:id="@+id/threads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="31" android:progress="3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>